# smol

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: 99bottles.smol  array.smol  factorial.smol  files.smol  fun_precedence.smol  func.smol  hello.smol  if_expr.smol  scopes.smol  split.smol  strings.smol  struct.smol  test.smol  unions.smol  while.smol
examples/modules/: bar.smol  baz.smol  foo.smol
examples/modules/inner/: fizz.smol
examples/modules/recursive/: directly.smol  rec1.smol  rec2.smol
smol/: __init__.py  checker.py  interpret.py  parser.py  tokenizer.py  utils.py
smol/checker/: __init__.py  checker.py  checker_type.py
smol/interpreter/: __init__.py  interpreter.py  overwrites.py  utils.py
smol/lexer/: __init__.py  lexer.py  token.py
smol/parser/: __init__.py  expressions.py  parser.py  statements.py  utils.py
std/: file.smol  os.smol  std.smol
tests/: .gitignore  equality.out  equality.smol  preparsing.out  preparsing.smol  stringify.out  stringify.smol
