[tool.poetry]
name = "smol"
version = "0.0.1"
description = "A small, expresive programming language"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pyright = "^1.1.334"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
ruff = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"